# Photocatalyst-Recommender-based-on-a-Large-Language-Model

./: .gitignore  README.md  bert_classify.py  bert_pretrain.py  bert_tokenizer.py  pyproject.toml
BPETokenizer/: merges.txt  vocab.json
data/: finetunning_rxid.xlsx  fold_split_indices.pickle  pretraining_data.pickle  validation_set.xlsx
